Fixed width issue on mobile by removing min-width.

--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,17 @@
 
 * { 
     font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
 }
 
 body {
-    background-size cover;
     margin: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     flex-direction: column;
+    justify-content: space-between;
     height: 100vh;
-    width: 100vw;
-    min-width: 400px;
+    width: 100%;
     background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%);
-    /* background: linear-gradient(to top, #09203f 0%, #537895 100%); */
-    /* background-color: rgb(79, 81, 81); */
 }
 .container {
     display: flex;
@@ -29,7 +24,8 @@ body {
 #title {
     width: 100%;
     text-align: center;
-    margin-top: 0;
+    margin-top: 10px;
+    margin-bottom: 40px;
     font-size: 2rem;
     font-weight: bold;
     color: rgb(214, 212, 212);
@@ -104,7 +100,6 @@ body {
     font-size: 28px;
     background-color: rgb(55, 70, 83);
     border: none;
-    /* box-shadow: 0px 1px 10px black; */
     width: fit-content;
     align-self: center;
     color: rgb(197, 197, 197);
@@ -120,7 +115,7 @@ button:hover {
 }
 
 .footer {
-    margin-bottom: 0;
+    margin-bottom: 5px;
     display: flex;
     justify-content: center;
     width: 100%;
